Fixed alignment issues

--- a/simulator/styles.css
+++ b/simulator/styles.css
@@ -55,29 +55,72 @@ h2{
 
 .option-item {
     margin: 10px -5px;
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
+.label-container {
+    flex-basis: 250px;
+    text-align: left;
+    padding-right: 20px; /* Space between label and dropdown/slider */
+    white-space: nowrap;
+}
+
+.dropdown-container {
+    flex-grow: 1;
+    box-sizing: border-box;
+    width: 100%;
+    padding-right:65px;
+    padding-left:85px;
+}
+
+.slider-container {
+    flex: 2;
+    max-width: calc(100%);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
+
+.value-container {
+    width: 50px; /* Adjusting the width for consistency */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-right: 10px;
+    padding-left: 20px;
+}
+
 label {
-    flex: 1;
+    text-align: left;
+    padding-right: 10px; /* To give some space between label and slider */
+    line-height: 25px;
 }
 
 select, input[type="range"] {
-    flex: 2;
-    margin-left: 10px;
+    width: 100%;
+    height: 25px;
+    margin: 0;
+    padding: 0; /* Ensure no padding interferes with the height */
+    box-sizing: border-box; /* This makes sure the width doesn't exceed 100% with border/padding */
+    vertical-align: middle; /* This should help vertically center it */
 }
 
 input[type="range"] {
     vertical-align: middle;
-    margin: 0;
+    margin-top: 8px;
     padding: 0;
+}
+
+select {
+    height: 25px;
 }
 
 #collector-area-value, #collector-depth-value, #temperature-value, #storage-tank-volume-value {
     display: inline-block;
-    width: 25px;
+    width: 30px;
     text-align: right;
     vertical-align: baseline;
 }
